--- a/a2.md
+++ b/a2.md
@@ -2,6 +2,6 @@
 
 [Lack of Password Complexity](./A2-Lack-of-Password-Complexity)
 
-[Insecure Compare and Timing Attacks](./Insecure-Compare-and-Timing-Attacks)
+[Insecure Compare and Timing Attacks](./A2-Insecure-Compare-and-Timing-Attacks)
 
-[Lack of HttpOnly Flag](./Lack-of-HttpOnly-Flag)
+[Lack of HttpOnly Flag](./A2-Lack-of-HttpOnly-Flag)
