--- a/a3.md
+++ b/a3.md
@@ -1,1 +1,3 @@
 [Cross-Site Scripting ("XSS")](./A3-Cross-Site-Scripting)
+
+[Cross-Site Scripting ("XSS") - DOM Based](./A3-Cross-Site-Scripting-DOM-Based)
